[gd_scene load_steps=11 format=3 uid="uid://kmdfnlp4no2n"]

[ext_resource type="Script" uid="uid://bpjb4phd3d6rj" path="res://scenes/entities/player/player.gd" id="1_8afob"]
[ext_resource type="Script" uid="uid://cw1wcmqls70xl" path="res://scenes/entities/player/state/player_state_idle.gd" id="2_75vfm"]
[ext_resource type="PackedScene" uid="uid://b4j2ro3j0wyu2" path="res://scenes/components/velocity/velocity_component.tscn" id="2_bj7e2"]
[ext_resource type="Texture2D" uid="uid://scdtrhb7q733" path="res://scenes/entities/player/sprites/player.png" id="2_dovo2"]
[ext_resource type="Script" uid="uid://cvnoieh8mu4io" path="res://scenes/entities/player/state/player_state_run.gd" id="3_0owmy"]
[ext_resource type="PackedScene" uid="uid://b0abknqr8162i" path="res://scenes/components/controller/controller_component.tscn" id="3_1murt"]
[ext_resource type="Script" uid="uid://c4ukxrvjt1std" path="res://core/state_machine/state_machine.gd" id="4_5sj0x"]
[ext_resource type="Script" uid="uid://dvj0h6kxk4gtn" path="res://scenes/entities/player/state/player_state_dash.gd" id="4_qek5x"]
[ext_resource type="Script" uid="uid://c8ulp2jjfyu82" path="res://scenes/entities/player/state/player_state_hit.gd" id="5_5gtgg"]

[sub_resource type="CircleShape2D" id="CircleShape2D_8afob"]
radius = 8.0

[node name="Player" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_8afob")

[node name="VelocityComponent" parent="." instance=ExtResource("2_bj7e2")]
unique_name_in_owner = true
max_speed = 200
acceleration = 25.0

[node name="ControllerComponent" parent="." instance=ExtResource("3_1murt")]
unique_name_in_owner = true

[node name="Timers" type="Node" parent="."]

[node name="DashCooldownTimer" type="Timer" parent="Timers"]
unique_name_in_owner = true
wait_time = 0.75
one_shot = true

[node name="StateMachine" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("4_5sj0x")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("2_75vfm")

[node name="Run" type="Node" parent="StateMachine"]
script = ExtResource("3_0owmy")

[node name="Dash" type="Node" parent="StateMachine"]
script = ExtResource("4_qek5x")
dash_power = 3.0
dash_duration = 0.15

[node name="Hit" type="Node" parent="StateMachine"]
script = ExtResource("5_5gtgg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_8afob")

[node name="Visuals" type="Node2D" parent="."]

[node name="Body" type="Sprite2D" parent="Visuals"]
self_modulate = Color(1, 0.819608, 0.4, 1)
texture = ExtResource("2_dovo2")

[node name="LeftEye" type="Sprite2D" parent="Visuals"]
self_modulate = Color(0, 0, 0, 1)
position = Vector2(-1, -1.875)
scale = Vector2(0.0625, 0.234375)
texture = ExtResource("2_dovo2")

[node name="RightEye" type="Sprite2D" parent="Visuals"]
self_modulate = Color(0, 0, 0, 1)
position = Vector2(3, -1.875)
scale = Vector2(0.0625, 0.234375)
texture = ExtResource("2_dovo2")

[node name="Debug" type="Node2D" parent="."]
visible = false

[node name="StateLabel" type="Label" parent="Debug"]
unique_name_in_owner = true
offset_left = -8.0
offset_top = -20.0
offset_right = 36.0
offset_bottom = 3.0
theme_override_font_sizes/font_size = 6
text = "state:"
